All ok in this stage.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ requests = "*"
 xmltodict = "*"
 notebook = "*"
 python-dotenv = "*"
+pandas = "*"
+sqlalchemy = "*"
+pymysql = "*"
 
 [dev-packages]
 
